# codebook

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  codebook.yml  codecov.yml  pyproject.toml
.claude/: settings.json
.codebook/: CICADA_INTEGRATION.md  CLIENT_SERVER.md  CODE_EXECUTION.md  CONFIGURATION.md  FRONTMATTER.md  LINK_SYNTAX.md  README.md  SYNTAX.md  TASKS.md  TEMPLATES.md
.codebook/edge-cases/: ANSI_ESCAPE_STRIPPING.md  BACKLINK_DEDUPLICATION.md  BATCH_RESOLUTION_FALLBACK.md  CACHE_EXPIRATION.md  GIT_ROOT_RESOLUTION.md  INCOMPLETE_TAG_DETECTION.md  README.md  RENDER_COOLDOWN.md  TASK_VERSION_DIFF_SKIPPING.md
.codebook/tasks/: 20251227-CODEBOOK_TAGS.md  20251227-MORE_CONFIGURATION.md  20251227-TASKS_PREPENDED_WITH_A_PROMPT.md  202512272300-ERROR_STRIPPING.md  202512272323-RUN-CUSTOM-CODE.md  202512272330-BIDIRECTIONAL_LINKS.md  202512280019-TASKS_AS_HISTORY.md  202512281206-TASKS_COVERAGE.md  202512281247-TASK_STATS.md  202512281312-WORKTREES.md  TASKS_WITH_DATES.md  TASK_CREATION.md
.github/workflows/: codebook-coverage.yml  codecov-coverage.yml  lint.yml  test.yml
codebook/: AI_HELPERS.md  CICADA_INTEGRATION.md  CLIENT_SERVER.md  CODE_EXECUTION.md  CONFIGURATION.md  FRONTMATTER.md  README.md  SYNTAX.md  TASKS.md  TEMPLATES.md  UTILS.md
codebook/edge-cases/: ANSI_ESCAPE_STRIPPING.md  BACKLINK_DEDUPLICATION.md  BATCH_RESOLUTION_FALLBACK.md  CACHE_EXPIRATION.md  GIT_ROOT_RESOLUTION.md  INCOMPLETE_TAG_DETECTION.md  README.md  RENDER_COOLDOWN.md  TASK_VERSION_DIFF_SKIPPING.md
codebook/tasks/: 20251227-CODEBOOK_TAGS.md  20251227-MORE_CONFIGURATION.md  20251227-TASKS_PREPENDED_WITH_A_PROMPT.md  202512272300-ERROR_STRIPPING.md  202512272323-RUN-CUSTOM-CODE.md  202512272330-BIDIRECTIONAL_LINKS.md  202512280010-FRONTMATTER.md  202512281206-TASKS_COVERAGE.md  202512281247-TASK_STATS.md  202512281312-WORKTREES.md  202512281502-AI_HELPERS.md  202512281515-TASK_UPDATE.md  202512281828-BACKLINKS_NAMES.md  202512281836-AI_DEFAULTS.md  202512291215-REVIEW_TASKS.md  202601061413-UTILS_STATUS.md
examples/: example.md  mock_server.py
tests/: __init__.py  conftest.py  test_cicada.py  test_cli.py  test_client.py  test_differ.py  test_parser.py  test_renderer.py  test_utils.py  test_watcher.py
(+12 files in other folders)
