[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebook"
version = "0.1.1"
description = "Dynamic Markdown Documentation with Live Code References"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CodeBook Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.0.0",
    "pyyaml>=6.0.0",
    "jqpy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "responses>=0.23.0",
    "flask>=2.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
codebook = "codebook.cli:main"

[project.urls]
Homepage = "https://github.com/codebook/codebook"
Documentation = "https://github.com/codebook/codebook#readme"
Repository = "https://github.com/codebook/codebook"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E402", "E501", "E741"]  # E402: imports after warning filters; E501: line length; E741: ambiguous var names

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]  # Use local source, not installed package
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Note: To suppress GIL warnings on Python 3.13+ free-threaded builds, run:
# PYTHONWARNINGS="ignore::RuntimeWarning" pytest
